--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
  - docker push swaroopsalvi/multi-nginx
  - docker push swaroopsalvi/multi-server
  - docker push swaroopsalvi/multi-worker
+ 
+deploy:
+ provider: elasticbeanstalk
+ region: us-west-2
+ app: multi-docker
+ env: MultiDocker-env
+ bucket_name: elasticbeanstalk-us-west-2-276587239836
+ buket_path: docker-multi
+ on:
+  branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
