--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ after_success:
  - docker push swaroopsalvi/multi-worker
  
 deploy:
+ edge: true
  provider: elasticbeanstalk
  region: us-west-2
  app: multi-docker
