--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
  app: multi-docker
  env: MultiDocker-env
  bucket_name: elasticbeanstalk-us-west-2-276587239836
- buket_path: docker-multi
+ bucket_path: docker-multi
  on:
   branch: master
  access_key_id: $AWS_ACCESS_KEY
